--- a/views/index.jade
+++ b/views/index.jade
@@ -4,12 +4,16 @@ block content
     div(id='map')
     form
         input(id='m' autocomplete='off')
+        span(id='online')
 
 block scripts
     script(src = '/socket.io/socket.io.js')
     script(src = 'http://code.jquery.com/jquery-1.11.1.js')
     script(type='text/javascript').
         var socket = io();
+        socket.on('online', function (online) {
+            $('#online').text('Online ' + online);
+        });
         var map;
         function initMap() {
             map = new google.maps.Map(document.getElementById('map'), {
