--- a/views/index.jade
+++ b/views/index.jade
@@ -3,7 +3,7 @@ extends layout
 block content
     div(id='map')
     form
-        input(id='m' autocomplete='off')
+        input(id='m' autocomplete='off' placeholder="Type message and pin it by click to map")
         span(id='online')
 
 block scripts
